ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
  - hosts:
      - kops.katsok9.net
    secretName: test-ingress-secret
  rules:
  - host: kops.katsok9.net
    http:
      paths:
      - path: /html1
        backend:
          serviceName: nginx1
          servicePort: 80
      - path: /html2
        backend:
          serviceName: nginx2
          servicePort: 80
