ingress-test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  tls:
    - hosts:
      - my.example.com
      secretName: test-ingress-secret
  rules:
  - host:
    http:
      paths:
      - path: /html1
        backend:
          serviceName: s1
          servicePort: 80
      - path: /html2
        backend:
          serviceName: s2
          servicePort: 80
